# trans

./: CMakeLists.txt  DbAbstraction.cpp  DbAbstraction.h  IDbAbstraction.h  Importer.cpp  Importer.h  Paragraph.cpp  Paragraph.h  main.cpp
ui/: CustomMenuBar.qml  MainWindow.qml  Style.qml  ToolButton.qml
